added list of parts, starting with 5 pin usb cable

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -107,6 +107,8 @@ When I unplug the USB hub (with only keyboard connected to it) the power consump
 
 == How to make a USB cable for powering attached USB devices and charging the Neo while in host mode ==
 
+{{note|work in progress}}
+
 This cable might be necessary for a number of reasons, e.g. 
 
 * The application requires that the Neo not become suspended
@@ -132,7 +134,11 @@ Just for reference, the USB wires from left to right are:
 The Mini_USB-B connector has a fifth pin, the ID-pin.
 This pin is supposed to be short to ground to signal FreeRunner to enter hostmode. For the Y-cable and enabling external power while in hostmode, you may connect a 47kOhm resistor from ID-pin to ground. This is the same trick the OM-wallcharger uses to signal to FreeRunner it can charge with 1A. Future kernels should switch to hostmode + external power when seeing this 47k resistor.
 
+===Parts===
+5 pin USB 2.0 Plug type A to mini USB Plug type B that should include the ID signal, so that you can add the 47kOhm resistor to ID-pin to trigger fast charging
 
+# [[http://www.firefold.com/Products/6-Foot-USB-20-Plug-type-A-to-mini-USB-Plug-type-B-5-pin-Cable---Black__USB-5PMINI-6.aspx firefold]]
+# Belkin 5 pin (find reference)
 
 
 [[Category:Neo1973 Hardware]]
