--- a/Scummvm.mw
+++ b/Scummvm.mw
@@ -4,11 +4,20 @@ ScummVM is a program which allows you to run certain classic graphical point-and
 
 '''Note:''' Scummvm runs in landscape mode and due to the bug http://docs.openmoko.org/trac/ticket/1244 it is not yet usable.
 
-'''JadeFalcon''' (IRC nick) has provided a fixed bitbake recipe for users of OM2007.1. You can download the [http://buildhost.automated.it/scummvm/scummvm.tar.bz2  recipe] and [http://buildhost.automated.it/scummvm/ pre-built ipk] files for use on your Neo 1973. 
+You can obtain it either by using [[Mokomakefile]] via
+
+ # make build-package-scummvm
+
+or using a binary, like so:
+
+ # wget http://rabenfrost.net/celtune/ipk/armv4t/libmpeg2-0_0.4.0b-r4_armv4t.ipk
+ # wget http://rabenfrost.net/celtune/ipk/armv4t/libvorbis_1.0.1-r2_armv4t.ipk
+ # wget http://rabenfrost.net/celtune/ipk/armv4t/scummvm_0.9.1-r4_armv4t.ipk
+ # opkg install libmpeg2-0_0.4.0b-r4_armv4t.ipk libvorbis_1.0.1-r2_armv4t.ipk scummvm_0.9.1-r4_armv4t.ipk
 
 [[Image:MonkeyIsland.png|Monky Island]]
 
-The games are copyrighted so you'll only be able to play those you own. You can also download some [http://www.scummvm.org/downloads.php#extras free games].
+The games are copyrighted so you'll only be able to play those you own. You can also download some free games from [http://www.scummvm.org/downloads.php#extras scummvm.org] and from the [http://www.the-underdogs.info Home of the Underdogs].
 
 When starting ScummVM use the command
 
@@ -18,7 +27,7 @@ This will map '''AUX''' button to the '''F5''' key, which is used to access the 
 
 '''Note:''' The AUX button does not work. There is no way to exit the game besides doing a killall scummvm.
 
-'''Note:''' It would be great if it where possible to get audi through the headphones and speaker muted.
+'''Note:''' It would be great if it where possible to get audio through the headphones and speaker muted.
 
 More information on ScummVM can be found on the [http://www.scummvm.org/ official] site
 
