/* Use SD Card for Tile Storage (git only) */  different location with latest stable release

--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -94,6 +94,10 @@ tile_path = /media/card
 
 to '''~/.om-locations/config/om-locations.cfg'''.
 
+<pre>
+config file may reside in ~/diversity-nav/config/diversity-nav.cfg
+</pre>
+
 === Download Tiles of a Region (git only) ===
 You can download tiles of a region by specifying '''-d''' option in '''om-locations-map-pack'''.  The usage is
 
