/* Using the Full Qwerty keyboard */

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -53,7 +53,7 @@ Most applications should bring up the keyboard automatically when keyboard input
 
 == Using the Full Qwerty keyboard ==
 
-{{note|These instructions are obsolete. They refer to the 2007.2 distribution. buildhost is not online anymore.}}
+{{note|These instructions are obsolete. They refer to the 2007.2 distribution. the server buildhost is no longer online.}}
 
 If you prefer a full qwerty keyboard you have to do some steps:
 * backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd and /usr/lib/enlightenment/modules/illume/keyboards/Full-QWERTY.kbd
