--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -12,6 +12,7 @@ The FreeRunner can be purchased from the [http://www.openmoko.com Online Store] 
 
 * Very high resolution touch screen (1.7" x 2.27" - 43mm x 58mm) 480x640 pixels
 * 128MB SDRAM memory
+* 256 MB integrated flash memory (expandable with microSD or microSDHC card)
 * Internal [[Neo FreeRunner GPS|GPS]] module
 * Bluetooth
 * 802.11 b/g [[Neo FreeRunner Wifi|WiFi]]
