/* Upgrading */  Added note about keyboard setting in illume configuration

--- a/Keyboard_Toggle.mw
+++ b/Keyboard_Toggle.mw
@@ -47,4 +47,10 @@ If that doesn't work, follow the instructions on [[Mokomakefile|building Om 2008
 === Upgrading ===
 If you upgrade, such as with opkg upgrade, you may have to perform the modification again.
 
+If you've upgraded to a 2008.8-updates you need to make sure that the keyboard is enabled in illume-config.
+
+* Install illume-config to get the illume configuration screen (the "wrench" )
+* From the configuration page select "Keyboard"
+* Select "Default"
+
 [[Category:Openmoko]]
