/* Using the Full Qwerty keyboard */  Replacing invalid instructions with link to current ones

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -53,21 +53,8 @@ Most applications should bring up the keyboard automatically when keyboard input
 
 == Using the Full Qwerty keyboard ==
 
-{{note|These instructions are obsolete. They refer to the 2007.2 distribution. the server buildhost is no longer online.}}
+See [http://wiki.openmoko.org/wiki/Keyboard_Debate#How_to_install_the_illume_.28Raster.27s.29_keyboard_.3F here]
 
-If you prefer a full qwerty keyboard you have to do some steps:
-* backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd and /usr/lib/enlightenment/modules/illume/keyboards/Full-QWERTY.kbd
-* opkg install http://buildhost.openmoko.org/daily-feed/armv4t/libdbus-1-3_1.2.1-r3_armv4t.ipk
-* opkg install http://buildhost.openmoko.org/daily-feed/armv4t/illume_0.0+svnr35693-r13_armv4t.ipk
-* rename /usr/lib/enlightenment/modules/illume/keyboards/Terminal.kbd to Terminal.kbd.orig
-* copy the Full-QWERTY.kbd that you backed up in the first step to /usr/lib/enlightenment/modules/illume/keyboards/Terminal.kbd
-* copy the Full-QWERTY.kbd that you backed up in the first step to /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd
-* restart x: /etc/init.d/xserver-nodm restart
-* enjoy the full qwerty keyboard
-
-All steps can be done automatically with this shell-script: [http://paste.ubuntuusers.de/raw/391361/ click]
-
-If you have problems with illume crashing, make sure that you don't have a copy of the original ASU Default.kbd file laying around (the one with the predictive dictionary).
 
 
 [[Category:Om 2008.8]]
