*Empty MediaWiki Message*

--- a/FreeRunner%2FButtons_and_LEDs.mw
+++ b/FreeRunner%2FButtons_and_LEDs.mw
@@ -92,6 +92,10 @@ LEDs are very useful in broadcasting valuable basic status information to the us
 * EVENT will stop to blink once all events have been acknowledged.
 
 
+=A first rules implementation=
+A C implementation of these rules has been [http://lists.openmoko.org/pipermail/openmoko-devel/2008-July/003458.html done by smurfy - phil] and is available at http://www.smurfy.de/files/neo/openmoko-led-v1.tar.gz
+
+
 =Python Script For Blinking Leds By Beats=
 Reads beats from a file and blinks FreeRunners leds.
  
