*Empty MediaWiki Message*

--- a/News_Archive.mw
+++ b/News_Archive.mw
@@ -19,3 +19,7 @@ News from the Openmoko Wiki mainpage
 === 06/2008 ===
 
 * 27/6: Neo FreeRunner shipping in the  [http://lists.openmoko.org/pipermail/community/2008-June/019943.html material world]
+
+[[Category:Community]]
+[[Category:Event]]
+[[Category:Openmoko Inc]]
