Followup discussion: USB hub mode no

--- a/Using_the_Neo_as_an_USB_Mass_storage_device.mw
+++ b/Using_the_Neo_as_an_USB_Mass_storage_device.mw
@@ -1,10 +1,19 @@
-The following script can be used to make the Neo FreeRunner act as a mass storage device (memory stick, USB key, portable drive...)
+Q: How to make the Neo FreeRunner act as a mass storage device (memory stick, USB key, portable drive...)
 
+A: The following script can be used
  #!/bin/sh                                                                                                                                                                   
- /etc/init.d/networking stop
+ ifdown usb0
  rmmod g_ether
  modprobe g_file_storage file=/dev/mmcblk0p1
 
 Reference: Petr Vanek "usb mass media storage" on the community mailing list, 2/9/08
+
+Q: Is it possible to pretend to be a USB hub, providing both g_ether and g_file_storage ?
+
+A: Not yet. At the moment it's one gadget driver at a time, but there is a project under way to allow use of multiple gadget drivers together. 
+
+http://blog.felipebalbi.com/?p=44
+http://www.linux-usb.org/gadget/
+
 
 [[Category:USB]]
