--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -105,13 +105,13 @@ You can download tiles of a region by specifying '''-d''' option in '''om-locati
 om-locations-map-pack -d version,source,min_level,max_level,lon,lat,width,height <tile-path>
 </pre>
 
-For example, to download tiles of Taipei and store them on the SD card, one can
+'''version''' can be any integer and '''source''' should be "osm".  For example, to download tiles of Taipei and store them on the SD card, one can
 
 <pre>
-om-locations-map-pack -d 0,osm,5,16,121.5,25.0,0.1,0.1 /media/card
+om-locations-map-pack -d `date "+%Y%m%d"`,osm,5,16,121.5,25.0,0.1,0.1 /media/card
 </pre>
 
-Those important are the last four parameters, which give the region to download.
+In this example, a region of longitude between 121.5 to 121.6 and of latitude bwtween 25.0 to 25.1 is specified.  Tiles in this region and of levels from 5 to 16 are downloaded to '''/media/card'''.  By instructing '''Locations''' to use '''/media/card''' as its tile path, one could pre-download tiles of any region and have '''Locations''' use them.
 
 == Turn on logging ==
 For now, nmea logging is off by default. To get nmea log for being used, we can send dbus message after om-locations launched as below:
