--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -111,9 +111,9 @@ om-locations-map-pack -d version,source,min_level,max_level,lon,lat,width,height
 om-locations-map-pack -d `date "+%Y%m%d"`,osm,5,16,121.5,25.0,0.1,0.1 /media/card
 </pre>
 
-In this example, a region of longitude between 121.5 to 121.6 and of latitude bwtween 25.0 to 25.1 is specified.  Tiles in this region and of levels from 5 to 16 are downloaded to '''/media/card'''.  By instructing '''Locations''' to use '''/media/card''' as its tile path, one could pre-download tiles of any region and have '''Locations''' use them.
+In this example, a region of longitude between '''121.5''' to '''121.6''' and of latitude bwtween '''25.0''' to '''25.1''' is specified.  Tiles in this region and of levels from '''5''' to '''16''' are downloaded to '''/media/card'''.  By instructing '''Locations''' to use '''/media/card''' as its tile path, one could pre-download tiles of any region and have '''Locations''' use them.
 
-== Turn on logging ==
+== Turn on GPS Logging ==
 For now, nmea logging is off by default. To get nmea log for being used, we can send dbus message after om-locations launched as below:
 <pre>
 dbus-send --session --dest=org.openmoko.Diversity --type=method_call --print-reply /org/openmoko/Diversity/objects/0/equipments/nmea org.openmoko.Diversity.Equipment.SetConfig string:log variant:string:/home/root/nmealog
