--- a/USB_host.mw
+++ b/USB_host.mw
@@ -1,4 +1,4 @@
-The mini-USB port on both the Neo 1973 and the Neo FreeRunner supports both USB host and USB device. This opens up a range of possibilities, such as adding USB cameras and USB input devices.
+The mini-USB port on both the Neo 1973 and the Neo FreeRunner supports both USB host and USB device (i.e. to appear as a [[Mass storage]] device). This opens up a range of possibilities, such as adding USB cameras and USB input devices.
 
 === Selecting USB host mode ===
 
