--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -1,5 +1,6 @@
 This page explains how to boot a FreeRunner from the (micro-)SD card rather than from the built-in NAND flash memory. The SD card shares a bus with the GPU, so it may not perform as well, but it is another option.
 
+== Booting from SDHC / suspend problems ==
 {{Warning | Booting from SDHC may cause problems at this time.   }} 
 See [http://thread.gmane.org/gmane.comp.handhelds.openmoko.community/19154/focus=19281| this thread.]
 
