More warning about problems

--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -1,8 +1,10 @@
-This page explains how to boot a FreeRunner from the (micro-)SD card rather than from the built-in NAND flash memory. The SD card shares a bus with the GPU, so it may not perform as well, but it is another option.
+This page explains how to boot a FreeRunner from the [[Supported_microSD_cards|(micro-)SD card]] rather than from the built-in NAND flash memory. The SD card shares a bus with the GPU, so it may not perform as well, but it is another option.
+
+{{Warning | Booting from SDHC may cause problems at this time (see bellow).}} 
 
 == Booting from SDHC / suspend problems ==
-{{Warning | Booting from SDHC may cause problems at this time.   }} 
-See [http://thread.gmane.org/gmane.comp.handhelds.openmoko.community/19154/focus=19281| this thread.]
+
+See [http://thread.gmane.org/gmane.comp.handhelds.openmoko.community/19154/focus=19281| this thread] for explanation of the partition table removal on suspend and maybe other problems related to using high capacity SD cards.
 
 == How it Works ==
 
