*Empty MediaWiki Message*

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -4,7 +4,7 @@ There are a plethora of Transflash / microSD cards out there.
 
 There had been a [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=677 bug] in the SD device driver (s3cmci) which caused some trouble. Please make sure you use a recent kernel which applies our kernel patchset rev2832 or higher.
 
-Booting from SDHC requires a u-boot from 2008-07-23 or later. '''But pay attention''' : there are problems with SDHC cards at suspend time. More details from [[Booting from SD]]
+Booting from SDHC requires a u-boot from 2008-07-23 or later. '''But pay attention''' : there are problems with SDHC cards at suspend time. More details from [[Booting from SD#Booting_from_SDHC_.2F_suspend_problems|Booting from SD]]
 
 Note that most vendors are using an irritating way of labeling the capacity of their cards (They are using the factor 1000 instead of 1024 for KB and MB). Therefore the real capacity of these cards will be about 5% less than the vendor's specification. For example, cards labelled ''6 GB'' will only have 5.7 GB of storage capacity.
 
