--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -40,8 +40,4 @@ Possible solutions:
 * Q: When will an Embedded EDS specification be available? i.e. How I can get applications to store and retrieve data from in it, in a compatible way?
 * Q: Will it out of the box synchronize with the Kontact PIM suite (KDE)?
 
-{{Languages|PIM_Storage}}
-[[Category:Technical]]
-[[Category:Openmoko]]
-[[Category:Documentation]]
-[[Category:Unimplemented]]
+[[Category:Software ideas]]
