*Empty MediaWiki Message*

--- a/Wishlist%2FReality_check_reminder.mw
+++ b/Wishlist%2FReality_check_reminder.mw
@@ -1,4 +1,3 @@
-{{Wishlist}}
 
 == Reality check reminder ==
 
@@ -42,4 +41,4 @@ Others checks that don't use software:
 == Design Issues ==
 
 
-[[Category:Unimplemented]]
+[[Category:Software ideas]]
