/* Context based to-do list */

--- a/Wishlist%2Fcontext_based_to-do_list.mw
+++ b/Wishlist%2Fcontext_based_to-do_list.mw
@@ -2,10 +2,9 @@
 
 == Context based to-do list ==
 
-A [[http://en.wikipedia.org/wiki/Getting_Things_Done GTD]]-like list, with reminders based in contexts (such time, position, talk/see/stay near somebody...).
+A [http://en.wikipedia.org/wiki/Getting_Things_Done GTD]-like list, with reminders based in contexts (such time, position, talk/see/stay near somebody...).
 
 It may use the [[Wishlist:Point_of_Interest_Framework]].
-
 
 == Use Cases ==
 
