/* Official updates for "stable" Om 2008.8 */

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -138,7 +138,7 @@ Official updates for the "stable" branch are now available (as of 2008/08/26) in
 * in the http://downloads.openmoko.org/repository/Om2008.8/ opkg feeds (which should already be configured for opkg updates in 2008.8),
 * as flash-able images in http://downloads.openmoko.org/releases/Om2008.8-update/
 
-The changelog of the stable branch can be ogtained here : http://git.openmoko.org/?p=openmoko.git;a=log;h=org.openmoko.asu.stable
+Changes are described in [http://git.openmoko.org/?p=openmoko.git;a=log;h=org.openmoko.asu.stable the Om 2008.8 stable changelog].
 
 == Dedication ==
 
