--- a/OSvS.mw
+++ b/OSvS.mw
@@ -19,6 +19,4 @@ To develop an application to provide encryption functions over the GSM Circuit S
 # The software must be open source and be easily available for peer review (not all components of zphone are licensed under the GPL, see http://zfoneproject.com/faq.html#opensource)
 # The software must be designed to operate on the Openmoko platform
 
-[[Category:Technical]]
-[[Category:Documentation]]
-[[Category:Calling Features]]
+[[Category:Software ideas]]
