*Empty MediaWiki Message*

--- a/Wishlist%2FFinger_based_Ebook_Reader.mw
+++ b/Wishlist%2FFinger_based_Ebook_Reader.mw
@@ -1,5 +1,4 @@
 
-
 OK, the UI has changed since I wrote my initial wish so I guess I should modify it just in case somebody out there is looking to be a genie.
 
 I still think that an ebook reader should be operable without a stylus, at least on its main page, a stylus might be needed for changing the options on the settings tab (more later).
@@ -22,4 +21,4 @@ Kombipom
 
 [Edit] Maybe it would be better to use landscape mode? That way the eyes need to hop less from one line to another. [/edit]
 
-[[Category:Ideas]]
+[[Category:Software ideas]]
