*Empty MediaWiki Message*

--- a/Wishlist%2FProfiles.mw
+++ b/Wishlist%2FProfiles.mw
@@ -142,5 +142,4 @@ Profile scheduling - more complex than timeout. Ability to create a schedule for
 
 The switching might be done by [[Wishlist:Point_of_Interest_Framework]].
 
-[[Category:Unimplemented]]
-[[Category:Profile]]
+[[Category:Software ideas]]
