/* Power Sources */ Power Sources - Human body's kinetic power

--- a/Wishlist%2FUnlikely.mw
+++ b/Wishlist%2FUnlikely.mw
@@ -38,6 +38,8 @@ Charge your mobile at every wlan-ap with no plug-in required.
 
 Another implementation might be power-over-bluetooth.
 
+=== Human body's kinetic power ===
+With any of [http://wiki.laptop.org/go/Freecharge_portable_charger these devices], especially those [http://wiki.laptop.org/go/Freecharge_portable_charger#Balancing_Musculoskeletal_System using human energy], happy Openmoko user will at once become noticeably more mobile. Unlimited travel far avay from casual power sources, this is what it gives.
 
 == Miscellaneous ==
 === Disinfection UV-Light ===
