/* Compatible Replacement Batteries */ BL-4c, no charge info, slightly thiner.

--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -63,8 +63,8 @@ It is probably a good idea to check that your battery is not greater than the st
 |-
 |NOKIA BL-4C
 |750
-|
-|
+|no
+|Slightly thinner than original.
 |-
 |NOKIA BL-5B
 |760/890
