/* Общие сведения */ Russian translation

--- a/U-Boot%2Fru.mw
+++ b/U-Boot%2Fru.mw
@@ -12,24 +12,22 @@
 
 == Общие сведения ==
 
-The GTA01 uses the [http://u-boot.sourceforge.net/ u-boot] bootloader.
-
-More information on u-boot can be found at 
+Модель [[GTA01]] использует загрузчик [http://u-boot.sourceforge.net/ u-boot], дополнительную информацию о котором можно найти по следующим адресам: 
 * http://www.denx.de/wiki/DULG
 * http://www.gumstix.org/tikiwiki/tiki-index.php?page=U-Boot
 * http://linuxdevices.com/articles/AT5085702347.html
 
-Additions to the vanilla u-boot already implemented include: 
-* Support for boot from NAND flash using [[S3C2410 Steppingstone]]
-* Support for S3C2410 NAND flash
-* Support for downloading programs via S3C2410 USB Device Controller
-* Support to display bootup logo / status on S3C2410 Framebuffer
+Дополнительно к оригинальному u-boot в GTA01 реализованы следующие возможности:
+* Загрузка устройства с флеши NAND с использованием [[S3C2410 Steppingstone]].
+* Поддержка S3C2410 NAND.
+* Загрузка ПО через контроллер S3C2410 USB device controller.
+* Отображение при загрузке логотипа или состояния процесса загрузки через S3C2410 framebuffer.
 
-However, u-boot still doesn't support many of the features that GTA01 needs, such as
-* Support for reading kernel/initrd from SD/Transflash
-* Support for downloading programs via S3C2410 USB Device Controller
+u-boot, однако, не поддерживает множество вещей, нужных для GTA01, например:
+* Чтение ядра и образа initrd с карт памяти SD/Transflash.
+* Загрузка ПО с вышеупомянутого контроллера S3C2410 USB device controller.
 
-[[User:HaraldWelte]] is working on those issues, and in fact most of them have already been implemented.
+[[User:HaraldWelte]] сейчас работает над этими проблемами, и, скорее всего, большинство из них уже имеет какое-то решение.
 
 == Исходный код загрузчика ==
 
