/* Official updates for "stable" Om 2008.8 */ Clarify branches

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -132,13 +132,14 @@ If we need to use the usb network more then just locally from the computer in th
 
 == Official updates for "stable" Om 2008.8 ==
 
-Posterior to the Om2008.8 release made on 2008/08/08, development of ASU/Om2008.8 is switching to a Debian-like model with three branches: stable,  testing and unstable ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details).
+Posterior to the Om2008.8 release made on 2008/08/08, development of ASU/Om2008.8 has been [http://lists.openmoko.org/pipermail/community/2008-August/026491.html reorganized in two branches].
 
-Official updates for the "stable" branch are now available (as of 2008/08/26) in two forms (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html see this message] for the announcement) :
-* in the http://downloads.openmoko.org/repository/Om2008.8/ opkg feeds (which should already be configured for opkg updates in 2008.8),
+Support for 2008.8 occurs on the 'org.openmoko.asu.stable' branch, with the short term goal to improve stability and useability. Changes to that branch are described in [http://git.openmoko.org/?p=openmoko.git;a=log;h=org.openmoko.asu.stable the Om 2008.8 stable changelog], and official updates  are available (as of 2008/08/26) in two forms (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html see this message] for the announcement) :
+* in the http://downloads.openmoko.org/repository/Om2008.8/ opkg feeds. Since these are already configured  in 2008.8, using 'opkg update; opkg upgrade' is sufficient to get these.
 * as flash-able images in http://downloads.openmoko.org/releases/Om2008.8-update/
+As always, update often only if you like to live on the leading edge with the associated risks. Otherwise ask around on IRC before you jump. Simply waiting for an official announce that the branch is in a good state is probably a better idea.
 
-Changes are described in [http://git.openmoko.org/?p=openmoko.git;a=log;h=org.openmoko.asu.stable the Om 2008.8 stable changelog].
+The long-term development branch is named 'org.openmoko.dev'. This branch is refocusing on the base system functionalities (applications will not be installed by default), and starts by catching up with upstream. Bugfixes from that branch should percolate to the previous one after an unspecified delay. Using binaries updates from that branch (or any other non-2008.8 repository) on a 2008.8 stable base is likely to send you in [http://en.wikipedia.org/wiki/Dependency_hell Dependency Hell], you have been warned.
 
 == Dedication ==
 
