/* Official updates for "stable" Om 2008.8 */ Delete two words

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -132,7 +132,7 @@ If we need to use the usb network more then just locally from the computer in th
 
 == Official updates for "stable" Om 2008.8 ==
 
-Posterior to the Om2008.8 release made on 2008/08/08, development of ASU/Om2008.8 has been [http://lists.openmoko.org/pipermail/community/2008-August/026491.html reorganized in two branches].
+Posterior to the Om2008.8 release made on 2008/08/08, development has been [http://lists.openmoko.org/pipermail/community/2008-August/026491.html reorganized in two branches].
 
 Support for 2008.8 occurs on the 'org.openmoko.asu.stable' branch, with the short term goal to improve stability and useability. Changes to that branch are described in [http://git.openmoko.org/?p=openmoko.git;a=log;h=org.openmoko.asu.stable the Om 2008.8 stable changelog], and official updates  are available (as of 2008/08/26) in two forms (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html see this message] for the announcement) :
 * in the http://downloads.openmoko.org/repository/Om2008.8/ opkg feeds. Since these are already configured  in 2008.8, using 'opkg update; opkg upgrade' is sufficient to get these.
