--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -139,7 +139,7 @@ Support for 2008.8 occurs on the ''org.openmoko.asu.stable'' branch, with the sh
 * as flash-able images in http://downloads.openmoko.org/releases/Om2008.8-update/
 As always, update often only if you like to be on the leading edge with the associated risks. Otherwise ask around on IRC before you jump or simply wait for an official announce that the branch is in a good state. Rumours are that this branch should flower in a few weeks. There has even been signs that the next [http://en.wikipedia.org/wiki/Point_release point release] could be named 2008.9.
 
-The long-term development branch is named ''org.openmoko.dev''. This branch has refocused on the base system functionalities (applications will not be installed by default), and started by catching up with upstream. Critical bugfixes from that branch should percolate to the .stable branch after an unspecified delay. Using binaries updates from that branch (or any other non-2008.8 repository) on a 2008.8 stable base is likely to send you in [http://en.wikipedia.org/wiki/Dependency_hell Dependency Hell], you have been warned.
+The long-term development branch is named ''org.openmoko.dev''. This branch has refocused on the base system functionalities (applications will not be installed by default), and started by catching up with upstream. Critical bugfixes from that branch should percolate to the ''.asu.stable'' branch after an unspecified delay. Using binaries updates from that branch (or any other non-2008.8 repository) on a 2008.8 stable base is likely to send you in [http://en.wikipedia.org/wiki/Dependency_hell Dependency Hell], you have been warned.
 
 == Dedication ==
 
