--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -23,6 +23,7 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 
 == Implementation Recommendations ==
 * This will be based on [http://labs.o-hand.com/embedded-eds/ Embedded EDS], this way we will can directly use Evolution data, get OpenSync for free, and eventually be able to talk to a Microsoft Exchange Server using the Novell Connector.
+* Alternatively: Go for a radically different approach: Use [http://en.wikipedia.org/wiki/Topic_Maps Topic Maps] to store PIM data, use Topic Map's integrated merging features for syncing. --[[user:xbaldauf|xbaldauf]]
 
 == Interactions ==
 * Embedded EDS needs libglade2, [[dbus]], and libdb.
