update image urls

--- a/Main_Page%2Ffi.mw
+++ b/Main_Page%2Ffi.mw
@@ -36,10 +36,9 @@ Voit lähteä liikkeelle [[introduction|johdantosivulta]], valokuvista, videoist
 *[[GroupSales|Ryhmätilaukset]]
 *[[Why Openmoko|Miksi Openmoko on ykkösvalinta: vertaileva katselmus]]
 ===<font color=white>Tilannevedokset</font>===
-*<font color=white>2008.08-jakelun suositellut ytimet ja juurikuvat ovat aina saatavissa [http://downloads.openmoko.org/releases/Om2008.8-update/ täältä].</font>
-*<font color=white>Vanhemman 2007.02-jakelun löydät aina näistä osoitteista:</font>
-** <font color=white>FreeRunnerille </font>[http://buildhost.openmoko.org/daily/freerunner/ http://buildhost.openmoko.org/daily/freerunner/]
-** <font color=white>Neo 1973:lle </font> [http://buildhost.openmoko.org/daily/neo1973/ http://buildhost.openmoko.org/daily/neo1973/]
+*<font color=white>2008.08-jakelun uusimmat ytimet ja juurikuvat ovat aina saatavissa [http://downloads.openmoko.org/releases/Om2008.8-update/ täältä].</font>
+*<font color=white>Minimaalisen, itse mukautettavan jakelun löydät aina seuraavasta osoitteesta:</font>
+** <font color=white>"gta02" FreeRunnerille, "gta01" Neo1973:lle </font>[http://downloads.openmoko.org/daily/ http://downloads.openmoko.org/daily/]
 **<font color=white>Arvioita päivittäisistä tilannevedoksista [[Snapshot_review|täällä]].
 
 |valign="top" style="background:#333333;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #cccccc; " |
