fixed typo "pygame_s_"

--- a/Tichy.mw
+++ b/Tichy.mw
@@ -82,7 +82,7 @@ Thanks to the service system, that allows to provide several version of the same
 
 
 To run it on the desktop, make sure you have python-pygames installed
-  sudo apt-get install python-pygames
+  sudo apt-get install python-pygame
 
 Then just download the sources, then go into test, and run 
  ./tichy
