/* Pages capable of development */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -18,6 +18,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * [[GTA02 partitions]]: seems to be about the GTA01; could someone with a GTA02 please correct the partition sizes and names?
 * [[Advanced_End-user]], [[Basic_End-user]], [[System_Developer]], [[Application_Developer]]: These are not up to the standard we set for List Pages on [[Openmoko_Wiki_Editing_Guidelines#List_pages]] [[User:Kempelen|Kempelen]]
 * [[Where to buy]]: This page screams for a new title, but I don't have any ideas. Please rename if you do! [[User:Kempelen|Kempelen]] 22:16, 31 August 2008 (UTC)
+This page is for perchase Neo 1973, outdated. I deleted already.
+[[User:coolcat|Brenda Wang]]
 
 ===Redundant Pages===
 * There are several pages concerning Openmoko compatible service providers:
