*Empty MediaWiki Message*

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -200,6 +200,8 @@ Look [http://wiki.openmoko.org/wiki/Today/2007.2#Adjust_UI_components_at_runtime
 There is a [https://wiki.evolvis.org/jalimo/index.php/Openmoko port of Jalimo] for Openmoko.
 
 === Does it support Flash so can I watch YouTube? ===
+You don't really need Flash to watch YouTube videos, for example, if you want to watch www.youtube.com/watch?v=k9QLdK6pFCI just install mplayer and use this command: 
+ mplayer http://ytpocket.com/getflv.php?id=k9QLdK6pFCI
 
 === Does it support Ruby? ===
 
