--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -7,7 +7,8 @@ This page provides instructions on how to install Qtopia (proper, not the [[ASU]
 |}
 
 == Current status ==
-On 08 August 2008, Qtopia released the [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 latest flash image for the FIC Neo FreeRunner (gta02)] containing the Qtopia 4.3.2 snapshot (Version: 4.3.2-080808) of 08 August 2008 (GPL version). 
+On 29 August 2008, Trolltech released the [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=79 Qtopia flash image for the FIC Neo FreeRunner (gta02)] containing the Qtopia 4.3.2 release (Version: 4.3.2-290808) (GPL version). 
+See [http://doc.trolltech.com/qtopia4.3/release-4-3-2.html Release-Notes]
 
 This image can successfully make and receive calls and text messages.  It can read all contacts from the SIM card (which the updated 2007.2 does not appear to be able to do).  It contains apps that appear to be more stable than the ones found in the 2007.2 image.  It has multiple input methods that appear to be more mature.  It does not, however, have a web browser or a GPS application.
 
