/* Создание загрузочных образов */ Russian translation

--- a/U-Boot%2Fru.mw
+++ b/U-Boot%2Fru.mw
@@ -117,7 +117,7 @@ GTA01Bv2 #
 
 == Создание загрузочных образов ==
 
-u-boot needs bootable images (such as kernels, but also initrd and others) in form of a so-called ''uImage''.  In order to create a ''uImage'' from e.g. a ''vmlinux'' kernel image, you can proceed as follows:
+Для нормальной работы u-boot требуется загрузочные образы (такие как ядро, но также initrd и др.) в форме так называемых ''uImage''. Чтобы создать этот формат из, например, образа ядра ''vmlinux'', надо сделать следующее:
 
 <pre>
 objcopy -O binary -R .note -R .comment -S vmlinux linux.bin
