/* Меню загрузки */ Russian translation

--- a/U-Boot%2Fru.mw
+++ b/U-Boot%2Fru.mw
@@ -126,25 +126,27 @@ u-boot/tools/mkimage -A arm -O linux -T kernel -C gzip -a 30008000 -e 30008000 -
 </pre>
 
 == Меню загрузки ==
-[[Image:Neo1973 uboot menu.jpg|thumb|400px|u-boot boot menu on Neo1973]]
+[[Image:Neo1973 uboot menu.jpg|thumb|400px|Загрузочное меню u-boot на экране Neo1973]]
 
-As of the Phase-0 release, our u-boot version now features an on-screen boot menu.
+На момент выпуска [[Neo 1973 Phase 0|Phase-0]] наша версия u-boot имеет возможность выводить на экран загрузочное меню.
 
 === Получение доступа к меню ===
 
-You can access the boot menu by pressing and holding the [[Neo1973 AUX Button]] together with the power button while switching the phone on.
+Чтобы войти в меню, надо перед включением аппарата нажать и удерживать кнопку AUX button, а затем нажать кнопку включения питания.
 
 === Использование ===
 
-By pressing the [[Neo1973 AUX Button]] you can cycle through the menu items.  Use the ''POWER'' button to select one item.
+Последовательными нажатиями кнопки AUX button можно ходить по пунктам меню. Для выбора нужного пункта необходимо нажать кнопку POWER.
 
 === Добавление пунктов в меню ===
 
-You can add items to the boot menu by setting environment variables. The canonical form is ''menu_<number> <Title>: U-Boot-Commands''
+Для добавления новых пунктов к существующему меню нужно установить соответствующие переменные среды. Общепринятый синтаксис таков: ''menu_<номер> <Название>: Команда-U-Boot''
 
-For example the following command will add a boot menu entry that switches to autofast charging and turns off the backlight:
-  setenv menu_6 Autofast-Charge and Backlight Off: neo1973 charger autofast\; neo1973 backlight off
-  saveenv
+Например, следующая команда добавит пункт загрузочного меню, который будет переключать телефон в режим быстрой зарядки (autofast charging) и выключать подсветку экрана:
+<pre>
+setenv menu_6 Autofast-Charge and Backlight Off: neo1973 charger autofast\; neo1973 backlight off
+saveenv
+</pre>
 
 == Информация загрузчика ==
 
