--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -11,11 +11,10 @@ Website: http://www.tangogps.org
 
 == Running tangoGPS on [[Om 2008.8]] ==
 
-{{note|There may be other steps because I remember it took a while before my TangoGPS started working, but these are the only things I remember installing}}
-
 From the freerunner connected to the internet:
 
   opkg install gpsd 
+{{note|I experienced hangups if gpsd was not installed.}}
   opkg install http://www.tangogps.org/downloads/tangogps_0.9.3-r1_armv4t.ipk
 
 If opkg complains about not being able to acquire a lock, try:
@@ -64,11 +63,16 @@ I think TangoGPS may have started working after I followed the instructions to g
 
 There are steps included in those instructions to improve GPS performance.  The great thing is that once you get GPRS working, you can roam with TangoGPS running and have it download maps as needed over the GPRS connection!
 
+== Using TangoGPS to create tracks for OpenStreetMap.org ==
+
+TangoGPS works fine to create track for Openstreetmap. However, it records and stores a track in its native format, use [http://www.tangogps.org/downloads/convert2gpx.pl] (see also: [http://psung.blogspot.com/2008/07/sharing-gps-tracks-from-tangogps-on.html tools]  to convert the track to GPX (i.e to import into Josem):
+
+    perl convert2gpx.pl 20080903_111508.log > 20080903_111508.gpx
+
 
 == Importing Tracks into TangoGPS ==
 
-TangoGPS is able to record and store a track in its native format, and [http://psung.blogspot.com/2008/07/sharing-gps-tracks-from-tangogps-on.html tools] exist to convert this to GPX.
-However, TangoGPS does not support the import of tracks. You may help yourself by using [http://relet.net/frog/archives/68 this tool] to import GPX trackpoints as a series of POIs directly into the sqlite database which tangoGPS uses to store POIs.
+TangoGPS does not support the import of tracks. You may help yourself by using [http://relet.net/frog/archives/68 this tool] to import GPX trackpoints as a series of POIs directly into the sqlite database which tangoGPS uses to store POIs.
 
 == Using Google Maps with TangoGPS ==
 
