/* How usable is it? */

--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -47,7 +47,7 @@ As the hacker's dream toy: it is fully functional. As a GSM phone: some people h
 
 If you want a fully functional smart phone, then download the [[Qtopia]] distribution. If you want to help OM develop it's end user applications, then download [[Om 2008.8|2008.8]]. It's still "Alpha", which means its not feature complete, but it will give you an idea of the direction we are headed. Read more about these and other [[Distributions|distributions]], then choose for yourself.
 
-Please see the [[FreeRunner: Selected Blogs and Articles]] to get more reviews. The [[FreeRunner Hardware Issues]] page may also be of interest.
+Please see the [[FreeRunner: Selected Blogs and Articles]] to get more reviews. The [[Neo FreeRunner Hardware Issues]] page may also be of interest.
 
 == See also ==
 *[[Neo FreeRunner (GTA02) FAQ]]
