/* Setting date/time from your linux box */

--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -18,6 +18,16 @@ where ''MM'' is the month, 01-12; ''DD'' is the day, 01-31; ''hhmm'' is the time
 
   ssh root@openmoko "date -u -s `date -u +%m%d%H%M%Y.%S`"
 
+== Setting your local timezone ==
+
+To have your FreeRunner display time appropriate to your local timezone, update the /etc/localtime symlink to point to the file in /usr/share/zoneinfo that represents your timezone. For example, in an SSH session to the phone, or in a terminal running on the phone:
+
+ # ls -l /etc/localtime
+ lrwxrwxrwx 1 root root 27 Jul 10 23:05 /etc/localtime -> /usr/share/zoneinfo/PST8PDT
+ # ln -s /usr/share/zoneinfo/CST6CDT /etc/localtime
+
+(Based on [http://n2.nabble.com/Date-%2B-NTP-tp675145p675163.html this post on the support mailing list])
+
 == Setting the date/time automatically with NTP ==
 
 If your FreeRunner is connected to the internet, you can instead set the time automatically:
