*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_NYC_Metro.mw
+++ b/Openmoko_Local_Groups:_NYC_Metro.mw
@@ -10,6 +10,8 @@
 |3||Bert Hartmann||BertHartm||Awesome Linux phone
 |-
 |4||Aditya Chadha||[[User:Ferric|ferric]]||Tinkerer
+|-
+|5||Seth Rothenberg||[[User:Pachai|pachai]]||GPS:Navigate to...My Wife, My kid
 |}
 
 [[Category:Openmoko Local Groups]]
