--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -458,7 +458,7 @@ One way to automate all this is to create /etc/conf.d/net.usb0 as follows. It se
 
 Reportedly, the ssh daemon (dropbear 0.49) on the FreeRunner appears to have a bug when sending the exit status back to the client. From time to time you receive an exit status of 255.
 
-To avoid ssh adding a new line for every ssh host-key to your known_hosts you can add the following to the phone section in ~/.ssh/config
+To avoid ssh adding a new line for every ssh host-key to your known_hosts you can add the following to the phone section in ~/.ssh/config (or see the snippet at : [[USB Networking#Changing_host_keys]] bellow)
 
   UserKnownHostsFile /dev/null
 
