/* Changing host keys */

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -522,7 +522,9 @@ If you reflash, your hosts keys will change.  Try this ~/.ssh/config snippet:
  UserKnownHostsFile /dev/null
  User root
 
-This is suggested because ssh on your desktop may complain if the key matching a certain IP changes (stored in .ssh/known_hosts).
+This is suggested because ssh on your desktop may complain if the key matching a certain IP changes (stored in .ssh/known_hosts). Now you have set this, you can issue the following command to connect to your moko :
+
+ ssh root@moko
 
 == GUI on desktop through SSH ==
 
