--- a/OpenmokoFramework.mw
+++ b/OpenmokoFramework.mw
@@ -20,7 +20,7 @@ FSO is an abbreviation for FreeSmartphone.Org. With FSO, Openmoko is trying to m
 * ''Answer'': [[FSO UI Tutorial]]
 
 = Timeline=
-* August/September: [http://n2.nabble.com/FSO-milestone-2-Zhone-sending-digit-tp740432p740546.html milestone 3]
+* Very soon (5 or 6 sept): [http://n2.nabble.com/FSO-milestone-2-Zhone-sending-digit-tp740432p740546.html milestone 3]
 * 01/07/2008: [[OpenmokoFramework/Status Update 3|milestone 2]]  achieved
 * 01/06/2008: [[OpenmokoFramework/Status Update 2|milestone 1]]  achieved
 
