--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -25,7 +25,7 @@ for:
 
 === Set up your local.conf ===
 
-Before building the image, you might want to update ''conf/local.conf'' (under ''shr-unstable'' in the top directory) to speed up the building process with:
+Before building the image, you might want to update ''shr-unstable/conf/local.conf'' to speed up the building process with:
 
  PARALLEL_MAKE = "-j 4"
  BB_NUMBER_THREADS = "4"
