--- a/Orrery.mw
+++ b/Orrery.mw
@@ -1,7 +1,7 @@
 {{Application|Orrery}}
 
 ----
-Please note: Some websites have links directly to the .ipk files for this program.   While it is very flattering that other people like the program enough to include a link to the .ipk file, those links will not automatically update when a newer .ipk file is uploaded.   So using one of those links might cause you to install an obsolete version of the program.   If your version of the code doesn't match the description below, please download the most recent version from here: [http://projects.openmoko.org/projects/orrery/]
+Please note: Some websites have links directly to the .ipk files for this program.   While it is very gratifying that other people like the program enough to include a link to the .ipk file, those links will not automatically update when a newer .ipk file is uploaded.   So using one of those links might cause you to install an obsolete version of the program.   If your version of the code doesn't match the description below, please download the most recent version from here: [http://projects.openmoko.org/projects/orrery/]
 ----
 
 == Overview ==
