added comments by mickey

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -58,8 +58,13 @@ thus patches are still welcome, especially if they help development of SHR.
 
 FSO has been started to overcome the deficiencies both of the 2007.2 and the 2008.8 stack, namely to come up with an extensible framework that gives developers the infrastructure they need to create solid and exciting software products based on the Openmoko platform. An infrastructure that supports competing UIs while we can collaborate on developing services, making the framework strong . Here, the focus is on stable highlevel services that you can access from whatever language or UI that supports [http://dbus.freesmartphone.org/ dbus]. People report that despite its infancy, e.g. the phone server part in FSO is already more solid than anywhere else.
 
-It is not really intended as future release-target, but used as a 'vessel' or 'container' for the development and testing of the new, future middleware.<br>
+It is not really intended as future release-target, but used as a 'vessel' or 'container' for the development and testing of the new, future middleware.
+
 The applications installed are intended as test-tools for the new middleware and not as fully featured, end user oriented applications. (even if it looks that way sometimes)
+
+In the words of Mickey, project manager:
+
+:"FSO is only a distro because "we can" (thanks to OpenEmbedded). Zhone is an independent UI application based on the FSO framework to facilitate testing. If you want to build own UIs or custom applications on the forthcoming Openmoko dbus service framework, then the FSO-image is a good starting point.
 
 * [[FSO]]
 * [http://trac.freesmartphone.org:8000/trac-example  Development tracker]
