--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -94,6 +94,8 @@ The Media Player is basically useless due to the default theme. To install with 
 
 === Bugs/Fixes ===
 
+{{todo|Link to bugreports and check if some of them might be fixed in newer updates}}
+
 *The Media Player is basically unusable because of the skin. And is also very buggy.
 *Battery meter always says its charging. Installing a terminal and running "apm" will display the proper battery status.
 
