/* XFCE */ added screen rotation

--- a/Debian.mw
+++ b/Debian.mw
@@ -197,6 +197,12 @@ I've not yet looked at the reason for the seemingly too slow start for the deskt
 zhone is available from the "Office" menu in xfce.
 The matchbox keyboard is available in "Accessories".
 
+If you want to display the screen on the long side (ie rotated, 4:3 aspect), add the following to the /etc/X11/xorg.conf in both the Device and InputDevice sections :
+
+  Option          "Rotate"                "CCW"
+
+and then (re)start xfce.
+
 = Miscellaneous =
 == Making the cursor invisible ==
 
