--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -64,11 +64,11 @@ Some Frequently Asked Questions for new owners are featured in the [[FAQ#Getting
 
 Before using the Neo FreeRunner for the first time, you should charge the battery completely. The battery can be charged using the provided charger at 1000mA or from a powered USB port capable of providing 500mA worth of current. Most computers will be able to charge the FreeRunner without any problems.
 
-(Note 1: Although the provided charger is rated at 2A, the maximum charge rate of the Neo FreeRunner is 1A, and thus the charge rate with the charger is less than the charger capacity.)
+Neo FreeRunner does NOT charge when powered off, so be sure to turn it on and allow it to boot all the way to the GUI. This should happen automatically when you plug in USB power, either from a computer or the provided charger.
 
-(Note 2: the provided charger includes three "national" plugs. The default is North America, with alternative U.K (3 square pins) and Euro (two round pins) adapters. To install the alternative power adapters, depress the latch in the cover (on the opposite side of the charger from the product information label) and slide the cover outward. Note that the two North American pins do not come out; the other adapters slide over them, and snap into place. The two-pin Euro adapter is removed in the same way as the cover. The three-pin U.K. adapter is removed by '''gently''' pressing the dummy ground pin (black) '''toward the end of the adapter with the cord''' and then sliding it off the adapter.)
+Although the provided charger is rated at 2A, the maximum charge rate of the Neo FreeRunner is 1A, and thus the charge rate with the charger is less than the charger capacity.
 
-(Note 3: the most reliable way to charge the Neo FreeRunner is to attach the original provided charger and to let the device boot all the way to GUI)
+The provided charger includes three "national" plugs. The default is North America, with alternative U.K (3 square pins) and Euro (two round pins) adapters. To install the alternative power adapters, depress the latch in the cover (on the opposite side of the charger from the product information label) and slide the cover outward. Note that the two North American pins do not come out; the other adapters slide over them, and snap into place. The two-pin Euro adapter is removed in the same way as the cover. The three-pin U.K. adapter is removed by '''gently''' pressing the dummy ground pin (black) '''toward the end of the adapter with the cord''' and then sliding it off the adapter.
 
 Charging an empty battery at 100mA takes 12~15 hours, at 500mA takes 2,5~3,5 hours, and at 1000mA takes 1.5~2.5 hours. (90%~100%) [to be confirmed]
 
